--- a/crmeb/.env
+++ b/crmeb/.env
@@ -1,1 +1,1 @@
-APP_DEBUG = true[APP]DEFAULT_TIMEZONE = Asia/Shanghai[DATABASE]TYPE = mysqlHOSTNAME = 47.108.58.179HOSTPORT = 3306USERNAME = mzzrootPASSWORD = 'root123'DATABASE = mzzPREFIX = m_CHARSET = utf8DEBUG = true[LANG]default_lang = zh-cn
+APP_DEBUG = true[APP]DEFAULT_TIMEZONE = Asia/Shanghai[DATABASE]TYPE = mysqlHOSTNAME = localhostHOSTPORT = 3306USERNAME = rootPASSWORD = '1234'DATABASE = mzzPREFIX = eb_CHARSET = utf8DEBUG = true[LANG]default_lang = zh-cn
